@@ -5,7 +5,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import acceptance.AbstractAccTest;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.stream.Collectors;
@@ -98,7 +97,7 @@ class SetOwnerAccTest extends AbstractAccTest {
   void testSetOwnerOfTasksWithDuplicatesSucceeds() {
 
     List<String> taskIds =
-        Arrays.asList(
+        List.of(
             "TKI:000000000000000000000000000000000058",
             "TKI:000000000000000000000000000000000059",
             "TKI:000000000000000000000000000000000058",
@@ -112,7 +111,7 @@ class SetOwnerAccTest extends AbstractAccTest {
   @Test
   void testSetOwnerOfTasksWithDuplicatesAndNotExistingSucceeds() {
     List<String> taskIds =
-        Arrays.asList(
+        List.of(
             "TKI:000000000000000000000000000000000058",
             "TKI:000000000000000000000000000047110059",
             "TKI:000000000000000000000000000000000059",
@@ -131,7 +130,7 @@ class SetOwnerAccTest extends AbstractAccTest {
   void testSetOwnerOfTasksWithNoQualifyingTasks() {
 
     List<String> taskIds =
-        Arrays.asList(
+        List.of(
             "TKI:000000000000000000000000000000000008",
             "TKI:000000000000000000000000000000000009",
             "TKI:000000000000000000000000000000000008",
