@@ -3,7 +3,6 @@ package pro.taskana.workbasket.internal;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.sql.Connection;
-import java.util.Arrays;
 import java.util.List;
 import javax.sql.DataSource;
 import org.junit.jupiter.api.AfterEach;
@@ -84,7 +83,7 @@ class WorkbasketServiceImplIntExplicitTest {
       workbasket2 = workBasketService.createWorkbasket(workbasket2);
       createWorkbasketWithSecurity(workbasket2, "user-1-1", true, true, false, false);
 
-      List<String> distTargets = Arrays.asList(workbasket0.getId(), workbasket1.getId());
+      List<String> distTargets = List.of(workbasket0.getId(), workbasket1.getId());
       Thread.sleep(SLEEP_TIME);
       workBasketService.setDistributionTargets(workbasket2.getId(), distTargets);
 
